# phisherman

./: .env-example  .gitignore  .pre-commit-config.yaml  DATABASE-SCHEMA.md  Dockerfile  MIGRATION_FROM_ANTIFRAUDE.md  Makefile  QUICK_START.md  QUICK_START_ENHANCED.md  README-DBML.md  README-FEEDS.md  README.md  alembic.ini  db-monitor.py  demo-cache.sh  docker-compose.elk.yml  docker-compose.yml  env.production.example  extract_phishing_urls.py  extract_phishtank_urls.py  inspect-database.py  migrate_feeds_improved.py  migrate_vehicles_to_elasticsearch.py  phisherman-schema.dbml  phishing_test_urls.txt  pyproject.toml  requirements-elk.txt  setup_kibana_dashboards.py  start-dev.sh  start-feeds-dev.sh  test-feeds-integration.py  test_quick_urls.py  top-phishtank-domains.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_victim_cataloging.py  003_increase_indicator_value_length.py  004_fix_indicator_value_index.py
configs/: prometheus.yml  saas_catalog.yaml  weights.yaml
headless_browser/: headlessbrowser.py
logstash/config/: logstash.yml
phisherman/: __init__.py  config.py
phisherman-feeds/: Dockerfile  __init__.py  config.py  main.py  security.py
phisherman-feeds/routers/: __init__.py  feeds.py  lookup.py
phisherman-feeds/services/: __init__.py  feed_manager.py  google_safebrowsing.py
phisherman-frontend/: README.md  next.config.js  package-lock.json  package.json
phisherman-frontend/src/app/: page.tsx
phisherman-frontend/src/components/: History.tsx  HistoryItem.tsx  SearchForm.tsx  SearchResults.tsx
phisherman-frontend/src/hooks/: useAnalyze.ts  useHistory.ts
phisherman-frontend/src/types/: api.ts
phisherman-standalone/: README.md  migrate_to_postgresql.py  phisherman-feed-standalone.py  requirements.txt
phisherman-standalone/standalone/: feeds-config-basic.json  migrate_to_postgresql.py
phisherman/analyzers/: __init__.py  blacklist_feeds.py  dns_resolver.py  engine.py  feeds_analyzer.py  protocol.py  rdap_whois.py  saas_detector_enhanced.py  tls_probe.py  url_heuristics.py  victim_analyzer.py  web_content_analyzer.py
phisherman/analyzers/web_content/: __init__.py  analyzer.py  cloaking_detector.py  content_scanner.py  header_analyzer.py  redirect_detector.py  ssl_analyzer.py
phisherman/api/: __init__.py  dependencies.py  main.py  metrics.py  schemas.py
phisherman/api/routers/: __init__.py  analyze.py  feeds_admin.py  health.py  victims.py
phisherman/datastore/: __init__.py  database.py  models.py  victim_models.py
phisherman/feeds/: __init__.py  models.py  processor.py
phisherman/feeds/parsers/: __init__.py  base.py  openphish.py  phishtank.py  urlhaus.py
phisherman/scorer/: __init__.py  linear_scorer.py  protocol.py
phisherman/services/: __init__.py  feeds_client.py  victim_classifier.py
phisherman/tasks/: cache_cleanup.py  celery_app.py  feeds.py
phisherman/utils/: __init__.py  cache.py  ssrf_protection.py  url_normalizer.py
scripts/: generate-env.py  init.sql  seed_victim_data.py
tests/: __init__.py  conftest.py  test_analyzers.py  test_api.py  test_enhanced_analyzers.py  test_integration_api.py  test_integration_db.py  test_scorer.py  test_tls_probe.py  test_victim_classifier.py
