[tool.poetry]
name = "phisherman"
version = "0.1.0"
description = "Production-ready phishing and malware URL analyzer service"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "phisherman"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg = {extras = ["binary"], version = "^3.1.0"}
celery = {extras = ["redis"], version = "^5.3.0"}
redis = "^5.0.0"
httpx = "^0.25.0"
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.15.0"
opentelemetry-sdk = "^1.15.0"
opentelemetry-instrumentation-fastapi = "^0.36b0"
opentelemetry-instrumentation-sqlalchemy = "^0.36b0"
python-whois = "^0.9.0"
dnspython = "^2.4.0"
cryptography = "^41.0.0"
pyyaml = "^6.0.0"
tldextract = "^5.1.0"
tenacity = "^8.2.0"
pyrate-limiter = "^3.1.0"
asyncpg = "^0.30.0"
greenlet = "^3.2.4"
psycopg2-binary = "^2.9.10"
asgiref = "^3.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
httpx = "^0.25.0"
ruff = "^0.1.6"
black = "^23.11.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
types-pyyaml = "^6.0.0"
types-redis = "^4.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501", "B008"]
target-version = "py312"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = [
    "phisherman-feeds/",
    "phisherman-frontend/",
    "phisherman-standalone/",
]

[[tool.mypy.overrides]]
module = [
    "whois.*",
    "celery.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=phisherman",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require Docker services)",
    "slow: marks tests as slow running",
]

[tool.coverage.run]
source = ["phisherman"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\(Protocol\\):",
    "@(abc\\.)?abstractmethod",
]
